# oop-project

./: .gitignore  CMakeLists.txt  requirements.md
src/: app_style.cpp  app_style.hpp  main.cpp
src/ui/: button.cpp  button.hpp  container.cpp  container.hpp  dom.cpp  dom.hpp  element.cpp  element.hpp  label.cpp  label.hpp  toggle.cpp  toggle.hpp
